# chili

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release-py-binding.yml  release-py.yml
crates/chili-bin/: Cargo.toml
crates/chili-bin/src/: main.rs
crates/chili-core/: Cargo.toml
crates/chili-core/benches/: parse_cache.rs
crates/chili-core/src/: engine_state.rs  errors.rs  eval_query.rs  obj.rs  par_df.rs  side_effect_fn.rs  stack.rs  utils.rs
crates/chili-core/tests/: parse_cache_test.rs
crates/chili-op/: Cargo.toml
crates/chili-op/benches/: eval.rs  load_par_df.rs  scan.rs  write_partition.rs
crates/chili-op/benches/common/: mod.rs
crates/chili-op/src/: io.rs  lib.rs  util.rs
crates/chili-op/tests/: partition_filter_test.rs  replay_test.rs
crates/chili-parser/tests/chili/: test_source_expr.rs
crates/chili-parser/tests/chili/src/: sub.chi
crates/chili-parser/tests/pepper/: test_source_expr.rs
crates/chili-parser/tests/pepper/src/: sub.pep  tick.pep
crates/chili-parser/tests/token/: test_source_token.rs
crates/chili-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/chili-py/chili/: __init__.py  engine.py
crates/chili-py/chili/src/: tick.pep
crates/chili-py/python/chili/: __init__.py
crates/chili-py/src/: lib.rs
crates/chili-py/tests/: bench_concurrent.py  test_broker.py  test_direct_dataframe.py  test_extras.py  test_partition_filter.py
docs/bench/: baseline.md  phase1.md  phase17_profile.py  phase17_reverse_scan_bench.py  phase17_sort_groupby_bench.py  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase9.md  summary.md
docs/bench/mdata-collab/: STATUS.md  mdata_vs_kdb_comparison.md
docs/bench/mdata-collab/artifacts/: broker_parity_test.py  phase17_profiling_kit.py  quantized_schema.md
docs/bench/mdata-collab/benchmarks/: phase17_profile_results.json  q1-q12_post_phase10.csv  q1-q12_pre_phase10.csv
docs/bench/mdata-collab/tests/: README.md  test_chili_gateway_quantized.py  test_chili_pepper_patterns.py
docs/history/mdata-collab/artifacts/: broker_parity_unix_status_2026-04-12.md
docs/proposals/: python_bindings_comparison_and_wishlist.md
docs/releases/: v0.7.5_claude.md
