[workspace.package]
version = "0.7.4"
edition = "2024"
authors = ["The Chili Authors <purple-chili@hotmail.com>"]
description = "chili"

[workspace]
resolver = "2"
members = ["crates/chili-*"]

[workspace.dependencies.polars-arrow]
version = "0.53.0"

[workspace.dependencies.polars]
version = "0.53.0"

[workspace.dependencies.polars-ops]
version = "0.53.0"

[workspace.dependencies.polars-compute]
version = "0.53.0"

[workspace.dependencies.polars-lazy]
version = "0.53.0"

[workspace.dependencies.polars-buffer]
version = "0.53.0"

[workspace.dependencies.chumsky]
version = "0.12.0"

[workspace.dependencies.ariadne]
version = "0.6"

[workspace.dependencies.pyo3]
version = "0.22"
features = ["extension-module", "abi3-py38"]

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = 3        # speed-optimized (was "z" — size). polars compute kernels
                     # rely heavily on LLVM auto-vectorization which "z" disables.
lto = "fat"          # cross-crate inlining across polars boundary
codegen-units = 1    # one compilation unit → maximum inlining scope
# panic = "abort"

[patch.crates-io.polars-core]
git = "https://github.com/hinmeru/polars-core-patch.git"
tag = "v0.53.0"
